...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BG Start Screen.png" translatesAutoresizingMaskIntoConstraints="NO" id="hyr-SX-MR5">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="736"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Logo Lanuchscreen.png" translatesAutoresizingMaskIntoConstraints="NO" id="bFA-JH-zHI">
                                <rect key="frame" x="107" y="20" width="160" height="160"/>
                                <constraints>
...
                                    <constraint firstAttribute="height" constant="220" id="tav-f5-qmj"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TLq-su-zgN">
                                <rect key="frame" x="37" y="275" width="300" height="100"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button" image="Smart Alarm Button.png"/>
                                <connections>
                                    <segue destination="huM-Uq-aWM" kind="show" id="l3B-nS-6jE"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iQD-Rg-KSF">
                                <rect key="frame" x="37" y="415" width="300" height="100"/>
...
